[gd_scene load_steps=14 format=3 uid="uid://ny4dd47ddeiy"]

[ext_resource type="Script" path="res://level_two.gd" id="1_qw4kc"]
[ext_resource type="PackedScene" uid="uid://btew2ipfh2lw5" path="res://character.tscn" id="2_bff1b"]
[ext_resource type="PackedScene" uid="uid://bksihhto2m3hl" path="res://Platforms/platform.tscn" id="3_ws0lk"]
[ext_resource type="PackedScene" uid="uid://cxr6vtfawowmt" path="res://Boundaries/sidewalls.tscn" id="4_3q85q"]
[ext_resource type="FontFile" uid="uid://dwwlgg8wd4bi6" path="res://Utility/DePixelHalbfett.ttf" id="5_malsm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cd213"]
size = Vector2(36, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ks661"]
size = Vector2(35, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2glyl"]
size = Vector2(42, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2opuj"]
size = Vector2(36, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_frd4j"]
size = Vector2(196.5, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w54rv"]
size = Vector2(64, 62)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_yrpg1"]
friction = 0.0
bounce = 1.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_4uc00"]
distance = -462.0

[node name="LevelTwo" type="Node2D"]
position = Vector2(1, 3)
script = ExtResource("1_qw4kc")

[node name="SideWalls" parent="." instance=ExtResource("4_3q85q")]
position = Vector2(-2, -63)

[node name="Character" parent="." instance=ExtResource("2_bff1b")]
position = Vector2(247, 50)

[node name="StaticBody2D" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(-1, -10)

[node name="StaticBody2D2" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(147, -10)

[node name="StaticBody2D3" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(353, -10)

[node name="DialogPos" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogPos"]
position = Vector2(186, 72)
shape = SubResource("RectangleShape2D_cd213")

[node name="DialogNeg" type="Area2D" parent="."]
position = Vector2(343, 65)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogNeg"]
position = Vector2(-38, 10)
shape = SubResource("RectangleShape2D_ks661")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NarratorChat" type="Label" parent="CanvasLayer"]
offset_left = 25.0
offset_top = 4.0
offset_right = 471.0
offset_bottom = 46.0
autowrap_mode = 3

[node name="NarratorChat2" type="Label" parent="CanvasLayer"]
offset_left = 105.0
offset_top = 140.0
offset_right = 228.0
offset_bottom = 163.0
scale = Vector2(1.43478, 1.3125)
autowrap_mode = 3

[node name="NarrationText" type="Label" parent="CanvasLayer"]
offset_left = 136.0
offset_top = 262.0
offset_right = 289.0
offset_bottom = 285.0
autowrap_mode = 3

[node name="Narration4" type="Label" parent="CanvasLayer"]
offset_left = 253.0
offset_top = 759.0
offset_right = 464.0
offset_bottom = 782.0
autowrap_mode = 3

[node name="CoverPage" type="PanelContainer" parent="CanvasLayer"]
visible = false
offset_right = 500.0
offset_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/CoverPage"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer/CoverPage/ColorRect"]
layout_mode = 2
offset_top = 489.0
offset_right = 500.0
offset_bottom = 510.0
theme_override_fonts/font = ExtResource("5_malsm")
text = "Life is shorter than you think..."
horizontal_alignment = 1

[node name="StaticBody2D4" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(247, 81)

[node name="StaticBody2D5" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(524, 99)
rotation = 1.57129
scale = Vector2(0.745001, 1.01779)

[node name="StaticBody2D6" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(99, 81)

[node name="NarrationTwoTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NarrationTwoTrigger"]
position = Vector2(324, 156)
shape = SubResource("RectangleShape2D_2glyl")

[node name="StaticBody2D7" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(62, 256)
scale = Vector2(0.160001, 1)

[node name="StaticBody2D20" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(62, 278)
scale = Vector2(0.160001, 1)

[node name="StaticBody2D21" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(62, 300)
scale = Vector2(0.160001, 1)

[node name="StaticBody2D8" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(62, 191)
scale = Vector2(0.160001, 0.993076)

[node name="StaticBody2D17" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(62, 234)
scale = Vector2(0.160001, 0.993076)

[node name="StaticBody2D9" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(114, 190)
scale = Vector2(0.160001, 0.993076)

[node name="StaticBody2D10" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(166, 189)
scale = Vector2(0.160001, 1)

[node name="StaticBody2D11" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(219, 189)
scale = Vector2(0.160001, 0.993076)

[node name="StaticBody2D12" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(269, 189)
scale = Vector2(0.160001, 0.993076)

[node name="StaticBody2D13" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(62, 212)
scale = Vector2(0.799999, 1)

[node name="StaticBody2D14" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(162, 212)

[node name="StaticBody2D18" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(112, 374)

[node name="NarrateThreeTrig" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NarrateThreeTrig"]
position = Vector2(73, 280)
shape = SubResource("RectangleShape2D_2opuj")

[node name="EndLevelBlocker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndLevelBlocker"]
position = Vector2(370, 768)
shape = SubResource("RectangleShape2D_frd4j")

[node name="SurprisePlatform" parent="." instance=ExtResource("3_ws0lk")]
visible = false
position = Vector2(330, 707)

[node name="LevelEnd" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelEnd"]
position = Vector2(451, 888)
shape = SubResource("RectangleShape2D_w54rv")

[node name="ColorRect" type="ColorRect" parent="LevelEnd"]
offset_left = 421.0
offset_top = 862.0
offset_right = 482.0
offset_bottom = 920.0

[node name="StaticBody2D15" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(157, 815)
scale = Vector2(2.68, 1)

[node name="StaticBody2D19" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(230, 491)
rotation = 1.63591
scale = Vector2(3.05083, 1)

[node name="StaticBody2D16" parent="." instance=ExtResource("3_ws0lk")]
position = Vector2(163, 323)
rotation = -0.3688
scale = Vector2(1.72, 1)
physics_material_override = SubResource("PhysicsMaterial_yrpg1")

[node name="WorldReset" type="Area2D" parent="."]
position = Vector2(18, 497)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldReset"]
shape = SubResource("WorldBoundaryShape2D_4uc00")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="DialogPos" to="." method="_on_dialog_pos_body_entered"]
[connection signal="body_exited" from="DialogPos" to="." method="_on_dialog_pos_body_exited"]
[connection signal="body_entered" from="DialogNeg" to="." method="_on_dialog_neg_body_entered"]
[connection signal="body_exited" from="DialogNeg" to="." method="_on_dialog_neg_body_exited"]
[connection signal="body_entered" from="NarrationTwoTrigger" to="." method="_on_narration_two_trigger_body_entered"]
[connection signal="body_exited" from="NarrationTwoTrigger" to="." method="_on_narration_two_trigger_body_exited"]
[connection signal="body_entered" from="NarrateThreeTrig" to="." method="_on_narrate_three_trig_body_entered"]
[connection signal="body_exited" from="NarrateThreeTrig" to="." method="_on_narrate_three_trig_body_exited"]
[connection signal="body_entered" from="EndLevelBlocker" to="." method="_on_end_level_blocker_body_entered"]
[connection signal="body_entered" from="LevelEnd" to="." method="_on_level_end_body_entered"]
[connection signal="body_entered" from="WorldReset" to="." method="_on_world_reset_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
